--- a/appsettings.production.json
+++ b/appsettings.production.json
@@ -1,12 +1,16 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ParamDB.db",
-    "ParamContext": "Server=(localdb)\\mssqllocaldb;Database=ParamContext-1de1c291-b539-4c58-b561-4eb5969c67f3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=ParamDB.db"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Backup": {
+    "download_path": "c:\\WebConfig\\download.zip",
+    "upload_path": "c:\\WebConfig\\upload.zip",
+    "file_key": "c:\\WebConfig\\backupPassword.txt"
+  }
 }
