--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ParamDB.db",
+    "DefaultConnection": "Data Source=ParamDB.db"
   },
   "Logging": {
     "LogLevel": {
@@ -9,9 +9,10 @@
   },
   "AllowedHosts": "*",
   "Backup": {
-    "download_path": "c:\\WebConfig\\download.zip",
-    "upload_path": "c:\\WebConfig\\upload.zip",
-    "file_key" : "c:\\WebConfig\\backupPassword.txt"
+    "temp_dir": "c:\\WebConfig\\Temp",
+    "factory_path": "c:\\WebConfig\\factory.zip",
+    "file_key": "c:\\WebConfig\\backupPassword.txt",
+    "file_key_factory": "c:\\WebConfig\\backupPassword.txt"
   }
 
 }
