--- a/appsettings.production.json
+++ b/appsettings.production.json
@@ -9,8 +9,9 @@
   },
   "AllowedHosts": "*",
   "Backup": {
-    "download_path": "c:\\WebConfig\\download.zip",
-    "upload_path": "c:\\WebConfig\\upload.zip",
-    "file_key": "c:\\WebConfig\\backupPassword.txt"
+    "temp_dir": "c:\\WebConfig\\Temp",
+    "factory_path": "c:\\WebConfig\\factory.zip",
+    "file_key": "c:\\WebConfig\\backupPassword.txt",
+    "file_key_factory": "c:\\WebConfig\\backupPassword.txt"
   }
 }
